--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-paho-mqtt = "0.11"
+paho-mqtt = { version = "0.11", features = ["bundled", "vendored-ssl"] }
 async-std = "1.12.0"
 futures = "0.3.21"
 serde = { version = "1.0.138", features = ["derive"] }
 serde_json = "1.0.82"
-rusqlite = "0.27.0"
+diesel = { version = "1.4.4", features = ["sqlite"] }
+libsqlite3-sys = { version = "*", features = ["bundled"] }
+openssl = "*"
+openssl-probe = "0.1.2"
