--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ futures = "0.3.21"
 serde = { version = "1.0.138", features = ["derive"] }
 serde_json = "1.0.82"
 diesel = { version = "1.4.4", features = ["sqlite"] }
+diesel_migrations = "1.4.0"
 libsqlite3-sys = { version = "*", features = ["bundled"] }
 openssl = "*"
 openssl-probe = "0.1.2"
