--- a/rusttracks-web/Cargo.toml
+++ b/rusttracks-web/Cargo.toml
@@ -13,7 +13,7 @@ serde_json = "1.0.82"
 diesel = { version = "1.4.4", features = ["sqlite", "r2d2", "numeric"] }
 diesel_migrations = "1.4.0"
 libsqlite3-sys = { version = "*", features = ["bundled"] }
-openssl = "*"
+openssl = { version = "0.10.41", features = ["vendored"] }
 openssl-probe = "0.1.2"
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 tokio = { version = "1.20.0", features = ["full"] }
