--- a/Dockerfile.tracker
+++ b/Dockerfile.tracker
@@ -4,7 +4,8 @@ FROM ${BASE_IMAGE} AS builder
 
 WORKDIR /app
 
-COPY . .
+COPY rusttracks-recorder .
+COPY rusttracks-contrib /rusttracks-contrib
 
 RUN cargo build --release
 
